# inkflow-ai

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  AI交互式小说产品-技术架构设计.md  API接口文档.md  Dockerfile  Makefile  README.docker.md  README.md  ai_novel.db  api-defects-analysis.md  api-fix-progress.md  docker-compose.yml  docker-entrypoint.sh  final_test.py  formatted_openapi.json  main.py  migrate_user_system.py  migrate_worldview.py  nginx.conf  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start-docker.sh  start.py  temp.json  updated-api-defects-analysis.md
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/resource/: project.registry.json
.trae/documents/: AI交互式小说产品需求文档.md  AI交互式小说后端API需求文档.md
.vercel/: project.json
alembic/: env.py
app/: __init__.py
app/api/: auth.py  chapters.py  stories.py
app/config/: settings.py
app/database/: __init__.py  connection.py
app/models/: __init__.py  chapter.py  choice.py  responses.py  story.py  user.py  worldview.py
app/services/: __init__.py  ai_service.py  story_service.py  worldview_service.py
app/utils/: __init__.py  exceptions.py  jwt_utils.py  logger.py  password.py
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  ai_novel.db  requirements.txt  start.sh  test_gemini.py
backend/app/: main.py
backend/tests/: __init__.py  test_stories.py
docs/: AI交互式小说产品-开发TodoList.md  AI交互式小说产品-用户体验设计.md  AI交互式小说产品-质量检测机制设计.md  API接口文档.md
src/: App.tsx
src/pages/: ApiDocs.tsx  Home.tsx  Login.tsx  Register.tsx  Stories.tsx  Story.tsx  UserCenter.tsx
(+16 files in other folders)
